--- a/content/journals/첫_출근.md
+++ b/content/journals/첫_출근.md
@@ -29,7 +29,7 @@ toc: false
 
 오션뷰라서, 출근할 맛이 날 것 같다.
 
-{{< image src="/view.jpeg" alt="view" position="left" style="border-radius: 8px; width: 50%; margin-bottom: 10px;" >}}
+{{< image src="/HSBC.jpeg" alt="view" position="left" style="border-radius: 8px; width: 75%; margin-bottom: 10px;" >}}
 
 첫 날은 널널했다. Onboarding 프로세스가 꽤 많다.
 
